# services/user_service/src/routes/auth_routes.rs
@@ -3,8 +3,7 @@ use utoipa_axum::routes;
 use crate::state::AppState;
 
 pub fn auth_openapi_router() -> OpenApiRouter<AppState> {
-    OpenApiRouter::new().routes(routes!(
-        crate::handlers::auth_handlers::login,
-        crate::handlers::auth_handlers::refresh_token
-    ))
+    OpenApiRouter::new()
+        .routes(routes!(crate::handlers::auth_handlers::login))
+        .routes(routes!(crate::handlers::auth_handlers::refresh_token))
 }
